<resources>
    <string name="app_name">AbuPro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮件</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱未注册</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="slogan">Home of Android Developers</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registering">Registering&#8230;</string>
    <string name="error_email">Invalid email.</string>
    <string name="error_password">Invalid password. At least six characters or digits.</string>
    <string name="error_email_empty">Email empty.</string>
    <string name="error_password_empty">Password empty</string>
    <string name="error_confirm_password">Not equal password</string>
    <string name="register_failed">Register failed.</string>
    <string name="register_success">Register success</string>
    <string name="email_taken">Email already taken</string>
    <string name="login_success">Login success.</string>
    <string name="login_failed">Login failed</string>
    <string name="logining">Logining&#8230;</string>
    <string name="home">Home</string>
    <string name="article">Article</string>
    <string name="me">个人中心</string>
    <string name="add_question">Add Question</string>
    <string name="input_question_title">Input question title</string>
    <string name="input_question_description">Input question description</string>
    <string name="publish">发布</string>
    <string name="title_not_null">Title is null</string>
    <string name="publish_success">Publish success</string>
    <string name="publish_failed">Publish failed</string>
    <string name="try_again">Try Again</string>
    <string name="no_more_data">No more data.</string>
    <string name="question_title_transition" translatable="false">question_title_transition</string>
    <string name="answer_transition" translatable="false">answer_transition</string>
    <string name="input_answer">Input answer</string>
    <string name="answer">Answer</string>
    <string name="answer_not_null">Answer is null.</string>
    <string name="question_des_transition" translatable="false">question_des_transition</string>
    <string name="year_ago">%d year ago</string>
    <string name="month_ago">%d moth ago</string>
    <string name="day_ago">%d day ago</string>
    <string name="hour_ago">%d hour ago</string>
    <string name="minute_ago">%d minute ago</string>
    <string name="just">just ago</string>
    <string name="user_answer">%s\'s answer</string>
    <string name="comment">Comment</string>
    <string name="input_comment">Input comment</string>
    <string name="send_success">Send success</string>
    <string name="send_failed">Send failed</string>
    <string name="load_comments_failed">Load comments failed.</string>
    <string name="load_more_comments_failed">Load more comments failed</string>
    <string name="favour_question">Favour question</string>
    <string name="dynamic_user_answer">%s: %s</string>
    <string name="input_article_title">Input article title</string>
    <string name="share">Share</string>
    <string name="input_article_description">Input article description</string>
    <string name="tag">Tag</string>
    <string name="my_share">我的分享</string>
    <string name="my_favour_articles">我喜欢的文章</string>
    <string name="my_favour_answers">我喜欢的回答</string>
    <string name="my_favour_questions">我喜欢的问题</string>
    <string name="feedback">用户反馈</string>
    <string name="settings">设置</string>
    <string name="take_photo">拍照</string>
    <string name="gallery">相册</string>
    <string name="my_questions">我的问题</string>
    <string name="my_answers">我的回答</string>
    <string name="add_slogan">添加座右铭</string>
    <string name="edit_user_name">编辑用户姓名</string>
    <string name="input_user_name">输入用户姓名</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="username_taken">User name taken.</string>
    <string name="edit_slogan">Edit Slogan</string>
    <string name="input_slogan">Input Slogan</string>
    <string name="about">关于</string>
    <string name="rating">Rating</string>
    <string name="sharing">Sharing Android+</string>
    <string name="logout">注销</string>
    <string name="confirm_logout">确认注销?</string>
    <string name="version" translatable="false">Android+ v%s.%d</string>
    <string name="about_info">About Android+</string>
    <string name="his_share">His/Her Share</string>
    <string name="his_questions">His/Her Questions</string>
    <string name="his_answers">His/Her answers</string>
    <string name="his_favour_questions">他喜欢的问题</string>
    <string name="his_favour_answers">他喜欢的回答</string>
    <string name="his_favour_articles">他喜欢的文章</string>
    <string name="user_name">User name</string>
    <string name="error_user_name_empty">User name empty</string>
    <string name="error_user_name">Invalid user name.</string>
    <string name="user_name_taken">User name taken</string>
    <string name="user_name_password_not_match">The username and password mismatch.</string>
    <string name="user_name_does_not_exist">User name does not exist.</string>
    <string name="tag_not_null">Please choose a tag.</string>
    <string name="yesterday">Yesterday</string>

    <string name="tip_drag">长按编辑,拖拽排序</string>
    <string name="my_cahnnel">我的频道</string>
    <string name="other_channel">其他频道</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
</resources>
