<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@null">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">
        <RadioGroup
            android:id="@+id/radioGroup_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/radio_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="true"
                android:background="@drawable/radio_btn"
                android:button="@null"
                android:padding="8dp"
                android:text="问题求解" />
            <RadioButton
                android:id="@+id/radio_job_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:button="@null"
                android:padding="8dp"
                android:background="@drawable/radio_btn"
                android:text="招聘信息" />
            <RadioButton
                android:id="@+id/radio_interview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/radio_btn"
                android:checked="false"
                android:padding="8dp"
                android:button="@null"
                android:layout_marginLeft="20dp"
                android:text="面试经验" />
        </RadioGroup>
        <EditText
            android:id="@+id/question_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="start"
            android:background="@null"
            android:padding="8dp"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:hint="@string/input_question_title"/>

        <EditText
            android:id="@+id/question_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:background="@null"
            android:padding="8dp"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:hint="@string/input_question_description"
            android:inputType="textMultiLine"
            android:imeOptions="actionDone"
            android:imeActionLabel="@string/publish"/>
    </LinearLayout>
</ScrollView>
